# ritual-desktop-main

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page-backup.tsx  page.tsx
app/calendar/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/home/: page.tsx
app/integrations/: layout.tsx  page.tsx
app/timer/: layout.tsx  page.tsx
app/widget/: layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  POSTMAN_SETUP.md  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt  ritual-api-postman-collection.json  ritual-api-postman-environment.json  ritual.db  run.py  start_dev.py  supabase_server.py
backend/app/: __init__.py  dependencies.py  main.py
components/: chat-assistant.tsx  command-palette.tsx  habit-selection-modal.tsx  habit-selector.tsx  ritual-logo.tsx  sidebar-layout.tsx  window-drag-handle.tsx
components/timer/: CompactTimer.tsx  TimeTracker.tsx  TimeTrackerWidget.tsx
components/ui/: animated-text.tsx  blurred-dots-background.tsx  border-beam.tsx  fade-text.tsx  full-calendar.tsx  mac-window.tsx  (+11 more)
contexts/: AuthContext.tsx  HabitsContext.tsx
hooks/: use-mobile.tsx  useApi.ts  useHabits.ts
lib/: api-client.ts  global-setup.js  native-timer.ts  performance.ts  ssl-helper.js  supabase.ts
native-timer/: TimerWidget.swift
src-tauri/: Cargo.toml  build.rs  build_native.sh  tauri.conf.json
src-tauri/native-timer/: MinimalWidget.swift  NativeTimer.swift  TimerWidget.swift  TimerWidgetApp.swift  bridge.h  build_widget.sh  timer_widget.h
src-tauri/src/: main.rs  native_widget.rs
styles/: globals.css
types/: supabase.ts
(+41 files in other folders)
